alb-ingress/sample-app/2048-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "2048-ingress"
  namespace: "2048-game"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:828381224373:certificate/8a7893e3-8374-4af1-874b-6e323d4acdc5
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: 2048-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
    - host: sample-app.megunlabo.net
      http:
        paths:
          - path: /*
            backend:
              serviceName: "service-2048"
              servicePort: 80
    - host: sample2-app.megunlabo.net
      http:
        paths:
          - path: /*
            backend:
              serviceName: "service-2048"
              servicePort: 80
